--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ Knowledge Base Question Generation.</a>
 			<br /> Jifan Yu, Xiaohan Zhang, Yifan Xu, Xuanyu Lei, Xinyu Guan, <b>Jing Zhang</b>, Lei Hou, Juanzi Li, and Jie Tang. 
 			<br /> <b>KDD'22</b>.  
 	</li></div>
-	<div class="pub all conf kr kr-el">
+	<div class="pub all conf kr kr-qa">
 		<li> 
 			<a href="https://aclanthology.org/2022.acl-long.396.pdf" target="_blank">Subgraph Retrieval Enhanced Model for Multi-hop Knowledge Base
 Question Answering.</a>  
