--- a/index.html
+++ b/index.html
@@ -405,6 +405,13 @@ Knowledge Base Question Generation.</a>
 			<br /> Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Cuiping Li, Hong Chen.
 			<br /> <b>AAAI'23</b>. 
 	</li></div>
+	<div class="pub all journal grl grl-pt">
+		<li> 
+			<a href="https://arxiv.org/pdf/2112.02275" target="_blank">A Multi-Strategy based Pre-Training Method for Cold-Start
+Recommendation.</a>  
+			<br /> Bowen Hao, Hongzhi Yin, <b>Jing Zhang</b>, Cuiping Li, Hong Chen.
+			<br /> <b>TOIS'23</b>. 
+	</li></div>
 	<div class="pub all journal kr kr-qa">
 		<li> 
 			<a href="https://www.sciencedirect.com/science/article/pii/S2666651022000249" target="_blank">A survey on complex factual question answering.</a>  
