--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ Knowledge Base Question Generation.</a>
 			<br /> Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Cuiping Li, Hong Chen.
 			<br /> <b>AAAI'23</b>. 
 	</li></div>
-	<div class="pub all journal grl grl-pt">
+	<div class="pub all journal grl grl-pt social recommendation">
 		<li> 
 			<a href="https://arxiv.org/pdf/2112.02275" target="_blank">A Multi-Strategy based Pre-Training Method for Cold-Start
 Recommendation.</a>  
