--- a/index.html
+++ b/index.html
@@ -184,8 +184,10 @@ Renmin University of China<br />
 
 <hr/>
 	<a href="#pubs">Publications</a> |
+	<a href="#students"> Students</a> |
 	<a href="#talks"> Talks</a> |
 	<a href="#services">Services</a>  
+	<a href="#Teaching">Teaching</a>  
 </h3>
 
 
