--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Renmin University of China<br />
 	<a href="#pubs">Publications</a> |
 	<a href="#students"> Students</a> |
 	<a href="#talks"> Talks</a> |
-	<a href="#services">Services</a>  
+	<a href="#services">Services</a> |  
 	<a href="#Teaching">Teaching</a>  
 </h3>
 
