--- a/index.html
+++ b/index.html
@@ -279,8 +279,7 @@ My research direction is data mining and knowledge discovery. My current researc
 
 	<div class="pub all conf LLM LLMhallucination">
 	<li> 
-			<a href="https://arxiv.org/abs/2404.06742" target="_blank">Transferable and Efficient Non-Factual Content Detection via Probe Training with Offline Consistency Checking
-.</a>  
+			<a href="https://arxiv.org/abs/2404.06742" target="_blank">Transferable and Efficient Non-Factual Content Detection via Probe Training with Offline Consistency Checking.</a>  
 			<br /> Xiaokang Zhang, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Kaifeng Yun, Jifan Yu, Juanzi Li, Jie Tang
 			<br /> <b>ACL'24</b>. 
 	</li></div>
@@ -293,8 +292,7 @@ Language Models.</a>
 	</li></div>
 	<div class="pub all preprint LLM LLMhallucination">
 	<li> 
-			<a href="https://arxiv.org/abs/2406.05328" target="_blank">Hidden Question Representations Tell Non-Factuality Within and Across Large Language Models
-.</a>  
+			<a href="https://arxiv.org/abs/2406.05328" target="_blank">Hidden Question Representations Tell Non-Factuality Within and Across Large Language Models.</a>  
 			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang</b>, Xinlei He, Qi Li, Ke Xu
 			<br /> <b>arXiv:2406.05328</b>. 
 	</li></div>
@@ -306,8 +304,7 @@ Language Models.</a>
 	</li></div>	
 	<div class="pub all preprint LLM LLM4StructuredData LLM-alignment">
 	<li> 
-			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios
-.</a>  
+			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios.</a>  
 			<br /> Xiaokang Zhang, <b>Jing Zhang<sup>*</sup></b>, Zeyao Ma, Yang Li, Bohan Zhang, Guanlin Li, Zijun Yao, Kangli Xu, Jinchang Zhou, Daniel Zhang-Li, Jifan Yu, Shu Zhao, Juanzi Li, Jie Tang
 			<br /> <b>arXiv:2403.19318</b>. 
 			<br><a class="button" href="https://tablellm.github.io/" target="_blank">code&model&data&demo</a> 
