--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <img src="zj_hp.png" alt="" width="200px">&nbsp;</td>
 <td align="left">
 <b><font size="5">Jing ZHANG</font></b> <br />
-<p>Associate Professor<br />
+<p>Professor<br />
 Department of Computer Science and Technology<br />
 School of Information<br />
 Renmin University of China<br />
