--- a/index.html
+++ b/index.html
@@ -283,6 +283,12 @@ My research direction is data mining and knowledge discovery. My current researc
 			<br /> Xiaokang Zhang, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Kaifeng Yun, Jifan Yu, Juanzi Li, Jie Tang
 			<br /> <b>ACL'24</b>. 
 	</li></div>
+	<div class="pub all conf LLM LLM-alignment LLM-eval">
+	<li> 
+			<a href="https://arxiv.org/abs/2311.18743" target="_blank">AlignBench: Benchmarking Chinese Alignment of Large Language Models.</a>  
+			<br /> Xiao Liu, Xuanyu Lei, Shengyuan Wang, Yue Huang, Zhuoer Feng, Bosi Wen, Jiale Cheng, Pei Ke, Yifan Xu, Weng Lam Tam, Xiaohan Zhang, Lichao Sun, Hongning Wang, <b>Jing Zhang</b>, Minlie Huang, Yuxiao Dong, Jie Tang
+			<br /> <b>ACL'24</b>. 
+	</li></div>
 	<div class="pub all preprint LLM LLM4StructuredData LLM4DB LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2404.11581" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
