--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ Recommendation.</a>
 			<br /> <b>AI Open'22</b>. 
 	</li></div>
 	
-	<div class="pub all journal grl grl-pt">
+	<div class="pub all journal grl grl-pt kr-el">
 		<li> 
 			<a href="https://arxiv.org/abs/2108.07516" target="_blank">Graph Contrastive Learning for Anomaly Detection.</a>  
 			<br /> Bo Chen, <b>Jing Zhang<sup>*</sup></b>, Xiaokang Zhang, Yuxiao Dong, Jian Song, Peng Zhang, Kaibo Xu, Evgeny Kharlamov, Jie Tang.
