--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ the Unimportant Layer.</a>
 			<br /> Xiaodong Chen, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>
 			<br /> <b>arXiv:2403.19135</b>. 
 	</li></div>
-	<div class="pub all preprint LLM LLM4StructuredData">
+	<div class="pub all preprint LLM LLM4StructuredData LLM4DB">
 	<li> 
 			<a href="https://arxiv.org/abs/2402.05121" target="_blank">Large Language Model for Table Processing: A Survey.</a>  
 			<br /> Weizheng Lu, Jiaming Zhang, <b>Jing  Zhang<sup>*</sup></b>, Yueguo Chen
