--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ More information about my experience and research can be found on <a href="https
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
-			<br /> <b>arXiv:2406.14991</b>. 
+			<br /> <b>Neurips'24</b>. 
 			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
 
 	</li></div>	
@@ -787,6 +787,7 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <b>Conference PC members:</b> 
 <br />
 </p><ol>
+	<li>2025: KDD, WWW, ARR, ICLR
 	<li>2024: KDD, WWW, AAAI, ARR, NeurIPS
 	<li>2023: KDD, WWW (SPC), AAAI, ECML/PKDD (SPC) 
 	<li>2022: KDD, WWW, IJCAI, AAAI, WSDM
