--- a/index.html
+++ b/index.html
@@ -271,6 +271,18 @@ More information about my experience and research can be found on <a href="https
 			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
 
 	</li></div>	
+	<div class="pub all preprint LLM LLM4StructuredData">
+	<li> 
+			<a href="https://arxiv.org/abs/2406.14991" target="_blank">PowerPM: Foundation Model for Power Systems.</a>  
+			<br /> Shihao Tu, Yupeng Zhang, <b>Jing Zhang</b>, Zhendong Fu, Yin Zhang, and Yang Yang. 
+			<br /> <b>Neurips'24</b>. 
+	</li></div>	
+	<div class="pub all preprint LLM">
+	<li> 
+			<a href="https://arxiv.org/pdf/2410.01363" target="_blank">PCQPR: Proactive Conversational Question Planning with Reflection.</a>  
+			<br /> Shasha Guo1, Lizi Liao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen
+			<br /> <b>EMNLP'24</b>. 
+	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.11681" target="_blank">R-Eval: A Unified Toolkit for Evaluating Domain Knowledge of Retrieval Augmented Large Language Models.</a>  
