--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ More information about my experience and research can be found on <a href="https
 	</li></div>	
 	<div class="pub all preprint LLM LLM4StructuredData">
 	<li> 
-			<a href="https://arxiv.org/abs/2406.14991" target="_blank">PowerPM: Foundation Model for Power Systems.</a>  
+			<a href="" target="_blank">PowerPM: Foundation Model for Power Systems.</a>  
 			<br /> Shihao Tu, Yupeng Zhang, <b>Jing Zhang</b>, Zhendong Fu, Yin Zhang, and Yang Yang. 
 			<br /> <b>Neurips'24</b>. 
 	</li></div>	
