--- a/index.html
+++ b/index.html
@@ -277,11 +277,17 @@ More information about my experience and research can be found on <a href="https
 			<br /> Shihao Tu, Yupeng Zhang, <b>Jing Zhang</b>, Zhendong Fu, Yin Zhang, and Yang Yang. 
 			<br /> <b>Neurips'24</b>. 
 	</li></div>	
-	<div class="pub all preprint LLM">
+	<div class="pub all preprint LLM  LLM-alignment kr kr-qa">
 	<li> 
 			<a href="https://arxiv.org/pdf/2410.01363" target="_blank">PCQPR: Proactive Conversational Question Planning with Reflection.</a>  
-			<br /> Shasha Guo1, Lizi Liao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen
+			<br /> Shasha Guo, Lizi Liao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen
 			<br /> <b>EMNLP'24</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLM-alignment">
+	<li> 
+			<a href="https://www.sciencedirect.com/science/article/pii/S2666651024000135" target="_blank">Authorship style transfer with inverse transfer data augmentation.</a>  
+			<br /> Zhonghui Shao, <b>Jing Zhang<sup>*</sup></b>, Haoyang Li, Xinmei Huang, Chao Zhou, Yuanchun Wang, Jibing Gong, Cuiping Li, Hong Chen
+			<br /> <b>AI Open'24</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing">
 	<li> 
