--- a/index.html
+++ b/index.html
@@ -262,7 +262,16 @@ More information about my experience and research can be found on <a href="https
 	
 
 <ol>
-
+	<div class="pub all preprint LLM LLM4StructuredData LLM4Toolusing LLM-alignment">
+	<li> 
+			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
+			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
+			<br /> <b>KDD'25</b>. 
+			<br><a class="button" href="https://github.com/RUCKBReasoning/SoAy" target="_blank">code</a> 
+			<br><a class="button" href="https://huggingface.co/frederickwang99/soayllama_v2_7b" target="_blank">Model Checkpoint</a> 
+			<br><a class="button" href="https://soay.aminer.cn/" target="_blank">Demo</a> 
+			<br><a class="button" href="https://huggingface.co/datasets/frederickwang99/SoAyBench" target="_blank">Benchmark</a> 
+	</li></div>	
 	<div class="pub all preprint LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
@@ -294,6 +303,7 @@ More information about my experience and research can be found on <a href="https
 			<a href="https://arxiv.org/abs/2406.11681" target="_blank">R-Eval: A Unified Toolkit for Evaluating Domain Knowledge of Retrieval Augmented Large Language Models.</a>  
 			<br /> Shangqing Tu, Yuanchun Wang, Jifan Yu, Yuyang Xie, Yaran Shi, Xiaozhi Wang, <b>Jing Zhang<sup>*</sup></b>, Lei Hou, Juanzi Li
 			<br /> <b>KDD'24</b>. 
+			<br><a class="button" href="https://github.com/THU-KEG/R-Eval" target="_blank">Code&Data</a> 
 	</li></div>
 
 	<div class="pub all conf LLM LLMhallucination">
@@ -327,12 +337,6 @@ Language Models.</a>
 			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang</b>, Xinlei He, Qi Li, Ke Xu
 			<br /> <b>arXiv:2406.05328</b>. 
 	</li></div>
-	<div class="pub all preprint LLM LLM4StructuredData LLM4Toolusing LLM-alignment">
-	<li> 
-			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
-			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
-			<br /> <b>arXiv:2405.15165</b>. 
-	</li></div>	
 	<div class="pub all preprint LLM LLM4StructuredData LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios.</a>  
