--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@ More information about my experience and research can be found on <a href="https
 			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
 			<br /> <b>KDD'25</b>. 
 			<br><a class="button" href="https://github.com/RUCKBReasoning/SoAy" target="_blank">code</a> 
-			<br><a class="button" href="https://huggingface.co/frederickwang99/soayllama_v2_7b" target="_blank">Model Checkpoint</a> 
-			<br><a class="button" href="https://soay.aminer.cn/" target="_blank">Demo</a> 
-			<br><a class="button" href="https://huggingface.co/datasets/frederickwang99/SoAyBench" target="_blank">Benchmark</a> 
+			<a class="button" href="https://huggingface.co/frederickwang99/soayllama_v2_7b" target="_blank">Model Checkpoint</a> 
+			<a class="button" href="https://soay.aminer.cn/" target="_blank">Demo</a> 
+			<a class="button" href="https://huggingface.co/datasets/frederickwang99/SoAyBench" target="_blank">Benchmark</a> 
 	</li></div>	
 	<div class="pub all preprint LLM LLM4StructuredData">
 	<li> 
