--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ More information about my experience and research can be found on <a href="https
 			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
 			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
 			<br /> <b>KDD'25</b>. 
-			<br><a class="button" href="https://github.com/RUCKBReasoning/SoAy" target="_blank">code</a> 
+			<br><a class="button" href="https://github.com/RUCKBReasoning/SoAy" target="_blank">Code</a> 
 			<a class="button" href="https://huggingface.co/frederickwang99/soayllama_v2_7b" target="_blank">Model Checkpoint</a> 
 			<a class="button" href="https://soay.aminer.cn/" target="_blank">Demo</a> 
 			<a class="button" href="https://huggingface.co/datasets/frederickwang99/SoAyBench" target="_blank">Benchmark</a> 
@@ -277,7 +277,7 @@ More information about my experience and research can be found on <a href="https
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
 			<br /> <b>Neurips'24</b>. 
-			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
+			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">Code&data</a> 
 
 	</li></div>	
 	<div class="pub all preprint LLM LLM4StructuredData">
