--- a/index.html
+++ b/index.html
@@ -267,17 +267,17 @@ More information about my experience and research can be found on <a href="https
 			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
 			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
 			<br /> <b>KDD'25</b>. 
-			<br><a class="button" href="https://github.com/RUCKBReasoning/SoAy" target="_blank">Code</a> 
-			<a class="button" href="https://huggingface.co/frederickwang99/soayllama_v2_7b" target="_blank">Model Checkpoint</a> 
+			<br><a class="button" href="https://github.com/RUCKBReasoning/SoAy" target="_blank">code</a> 
+			<a class="button" href="https://huggingface.co/frederickwang99/soayllama_v2_7b" target="_blank">model Checkpoint</a> 
 			<a class="button" href="https://soay.aminer.cn/" target="_blank">Demo</a> 
-			<a class="button" href="https://huggingface.co/datasets/frederickwang99/SoAyBench" target="_blank">Benchmark</a> 
+			<a class="button" href="https://huggingface.co/datasets/frederickwang99/SoAyBench" target="_blank">benchmark</a> 
 	</li></div>	
 	<div class="pub all preprint LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
 			<br /> <b>Neurips'24</b>. 
-			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">Code&data</a> 
+			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
 
 	</li></div>	
 	<div class="pub all preprint LLM LLM4StructuredData">
@@ -303,7 +303,7 @@ More information about my experience and research can be found on <a href="https
 			<a href="https://arxiv.org/abs/2406.11681" target="_blank">R-Eval: A Unified Toolkit for Evaluating Domain Knowledge of Retrieval Augmented Large Language Models.</a>  
 			<br /> Shangqing Tu, Yuanchun Wang, Jifan Yu, Yuyang Xie, Yaran Shi, Xiaozhi Wang, <b>Jing Zhang<sup>*</sup></b>, Lei Hou, Juanzi Li
 			<br /> <b>KDD'24</b>. 
-			<br><a class="button" href="https://github.com/THU-KEG/R-Eval" target="_blank">Code&Data</a> 
+			<br><a class="button" href="https://github.com/THU-KEG/R-Eval" target="_blank">code&data</a> 
 	</li></div>
 
 	<div class="pub all conf LLM LLMhallucination">
