--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ More information about my experience and research can be found on <a href="https
 			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
 			<br /> <b>KDD'25</b>. 
 			<br><a class="button" href="https://github.com/RUCKBReasoning/SoAy" target="_blank">code</a> 
-			<a class="button" href="https://huggingface.co/frederickwang99/soayllama_v2_7b" target="_blank">model Checkpoint</a> 
-			<a class="button" href="https://soay.aminer.cn/" target="_blank">Demo</a> 
+			<a class="button" href="https://huggingface.co/frederickwang99/soayllama_v2_7b" target="_blank">model checkpoint</a> 
+			<a class="button" href="https://soay.aminer.cn/" target="_blank">demo</a> 
 			<a class="button" href="https://huggingface.co/datasets/frederickwang99/SoAyBench" target="_blank">benchmark</a> 
 	</li></div>	
 	<div class="pub all preprint LLM LLM4StructuredData">
