--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@ More information about my experience and research can be found on <a href="https
 			<a class="button" href="https://soay.aminer.cn/" target="_blank">demo</a> 
 			<a class="button" href="https://huggingface.co/datasets/frederickwang99/SoAyBench" target="_blank">benchmark</a> 
 	</li></div>	
+	<div class="pub all preprint LLM LLM4StructuredData LLM4DB">
+	<li> 
+			<a href="https://arxiv.org/abs/2402.05121" target="_blank">Large Language Model for Table Processing: A Survey.</a>  
+			<br /> Weizheng Lu, Jiaming Zhang, <b>Jing  Zhang<sup>*</sup></b>, Yueguo Chen
+			<br /> <b>Frontiers of Computer Science (FCS'25)</b>. 
+	</li></div>
 	<div class="pub all preprint LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
@@ -350,12 +356,6 @@ Language Models.</a>
 the Unimportant Layer.</a>  
 			<br /> Xiaodong Chen, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>
 			<br /> <b>arXiv:2403.19135</b>. 
-	</li></div>
-	<div class="pub all preprint LLM LLM4StructuredData LLM4DB">
-	<li> 
-			<a href="https://arxiv.org/abs/2402.05121" target="_blank">Large Language Model for Table Processing: A Survey.</a>  
-			<br /> Weizheng Lu, Jiaming Zhang, <b>Jing  Zhang<sup>*</sup></b>, Yueguo Chen
-			<br /> <b>arXiv:2402.05121</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLM4DB LLM-alignment">
 	<li> 
