--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ More information about my experience and research can be found on <a href="https
 	<div class="pub all preprint LLM LLM4StructuredData LLM4DB">
 	<li> 
 			<a href="https://arxiv.org/abs/2402.05121" target="_blank">Large Language Model for Table Processing: A Survey.</a>  
-			<br /> Weizheng Lu, Jiaming Zhang, <b>Jing  Zhang<sup>*</sup></b>, Yueguo Chen
+			<br /> Weizheng Lu, <b>Jing  Zhang<sup>*</sup></b>, Ju Fan, Zihao Fu, Yueguo Chen, Xiaoyong Du
 			<br /> <b>Frontiers of Computer Science (FCS'24)</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM4StructuredData">
