--- a/index.html
+++ b/index.html
@@ -771,6 +771,7 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <hr />
 <h3 class="big"><a name="talks"> Invited Talks </a></h3>
 <ol>
+	<li>2024: Invited Talk about Enhancing Students' Engineering Skills with Large Models at NDBC 2024. <a class="button" href="publications/LLM4EngineeringSkills-zhangjing.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2024: Invited Talk about StructureDataLLM at WAIC 2024. <a class="button" href="publications/StructureDataLLM-zhangjing.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2024: Invited Talk about LLM Alignment at YOCSEF 2024. <a class="button" href="publications/LLM Alignment-Jing Zhang-2024.5.18.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2024: Invited Talk about LLM4DB at Huawei.</li>
