--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@ More information about my experience and research can be found on <a href="https
 	
 
 <ol>
+	<div class="pub all preprint LLM LLM4StructuredData LLM4DB LLM-alignment">
+	<li> 
+			<a href="https://arxiv.org/abs/2404.11581" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
+Language Models.</a>  
+			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
+			<br /> <b>VLDB'25</b>. 
+	</li></div>
 	<div class="pub all preprint LLM LLM4StructuredData LLM4Toolusing LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
@@ -329,13 +336,6 @@ More information about my experience and research can be found on <a href="https
 			<a href="https://arxiv.org/pdf/2308.16475.pdf" target="_blank">SP^3: Enhancing Structured Pruning via PCA Projection.</a>  
 			<br /> Yuxuan Hu, <b>Jing Zhang<sup>*</sup></b>, Zhe Zhao, Chen Zhao, Xiaodong Chen, Cuiping Li, Hong Chen.
 			<br /> <b>Findings of ACL'24</b>. 
-	</li></div>
-	<div class="pub all preprint LLM LLM4StructuredData LLM4DB LLM-alignment">
-	<li> 
-			<a href="https://arxiv.org/abs/2404.11581" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
-Language Models.</a>  
-			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
-			<br /> <b>arXiv:2404.11581</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLMhallucination">
 	<li> 
