--- a/index.html
+++ b/index.html
@@ -263,6 +263,13 @@ More information about my experience and research can be found on <a href="https
 
 <ol>
 	<div class="pub all preprint LLM LLM4StructuredData LLM4DB LLM-alignment">
+	<div class="pub all preprint LLM LLM4Compression">
+	<li> 
+			<a href="https://arxiv.org/abs/2403.19135" target="_blank">Compressing Large Language Models by Streamlining
+the Unimportant Layer.</a>  
+			<br /> Xiaodong Chen, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>
+			<br /> <b>ICLR'25</b>. 
+	</li></div>
 	<li> 
 			<a href="https://arxiv.org/abs/2404.11581" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
 Language Models.</a>  
@@ -349,13 +356,6 @@ Language Models.</a>
 			<br /> Xiaokang Zhang, <b>Jing Zhang<sup>*</sup></b>, Zeyao Ma, Yang Li, Bohan Zhang, Guanlin Li, Zijun Yao, Kangli Xu, Jinchang Zhou, Daniel Zhang-Li, Jifan Yu, Shu Zhao, Juanzi Li, Jie Tang
 			<br /> <b>arXiv:2403.19318</b>. 
 			<br><a class="button" href="https://tablellm.github.io/" target="_blank">code&model&data&demo</a> 
-	</li></div>
-	<div class="pub all preprint LLM LLM4Compression">
-	<li> 
-			<a href="https://arxiv.org/abs/2403.19135" target="_blank">Compressing Large Language Models by Streamlining
-the Unimportant Layer.</a>  
-			<br /> Xiaodong Chen, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>
-			<br /> <b>arXiv:2403.19135</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLM4DB LLM-alignment">
 	<li> 
