--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ More information about my experience and research can be found on <a href="https
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19135" target="_blank">Compressing Large Language Models by Streamlining
 the Unimportant Layer.</a>  
-			<br /> Xiaodong Chen, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup>,Yanling Wang, Cuiping Li, Hong Chen</b>
+			<br /> Xiaodong Chen, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>,Yanling Wang, Cuiping Li, Hong Chen
 			<br /> <b>ICLR'25</b>. 
 	</li></div>
 	<li> 
