--- a/index.html
+++ b/index.html
@@ -219,14 +219,17 @@ More information about my experience and research can be found on <a href="https
 			<a class="url"  onclick="show('preprint')">pre-print</a> 
 	</li>
 	<li style="list-style-type:none">
-		<b>	<a class="url"  onclick="show('LLM')">large language model</a> </b>:  
-			<a class="url"  onclick="show('LLM-alignment')">LLM alignment</a> |
-			<a class="url"  onclick="show('LLM4Compression')">LLM Compression</a> | 
+		<b>	<a class="url"  onclick="show('LLM')">LLM</a> </b>:  
+			<a class="url"  onclick="show('LLM-alignment')">LLM Alignment</a> |
+			<a class="url"  onclick="show('LLMCompression')">LLM Compression</a> | 
+			<a class="url"  onclick="show('LLMInferenceSpeedup')">LLM Inference Acceleration</a> | 
 			<a class="url"  onclick="show('LLM4StructuredData')">LLM for Structured Data</a> |
-			<a class="url"  onclick="show('LLM4DB')">LLM for DB</a> |
-			<a class="url"  onclick="show('LLM4Toolusing')">LLM for Tool Using</a> |
+			<a class="url"  onclick="show('LLM4DB')">LLM4DB</a> |
+			<a class="url"  onclick="show('LLM4Toolusing')">LLM Tool Using</a> |
 			<a class="url"  onclick="show('LLMhallucination')">LLM Hallucination</a> |
-			<a class="url"  onclick="show('LLM-eval')">evaluation</a> 
+			<a class="url"  onclick="show('LLM-eval')">LLM Evaluation</a> 
+			<a class="url"  onclick="show('VLM')">VLM</a> 
+			<a class="url"  onclick="show('VLM-eval')">VLM Evaluation</a> 
 		<br />
 	</li>
 	<li style="list-style-type:none">
@@ -262,21 +265,63 @@ More information about my experience and research can be found on <a href="https
 	
 
 <ol>
-	<div class="pub all preprint LLM LLM4StructuredData LLM4DB LLM-alignment">
-	<div class="pub all preprint LLM LLM4Compression">
+	<div class="pub all preprint LLM LLM-alignment">
+	<li> 
+			<a href="https://arxiv.org/abs/2501.01054" target="_blank">Dynamic Scaling of Unit Tests for Code Reward Modeling.</a>  
+			<br /> Zeyao Ma, Xiaokang Zhang,  <b>Jing  Zhang<sup>*</sup></b>, Jifan Yu, Sijia Luo, Jie Tang
+			<br /> <b>arXiv:2501.01054</b>. 
+	</li></div>
+	<div class="pub all preprint VLM VLM-eval">
+	<li> 
+			<a href="https://arxiv.org/abs/2501.01054" target="_blank">VisualSimpleQA: A Benchmark for Decoupled Evaluation of Large Vision-Language Models in Fact-Seeking Question Answering.</a>  
+			<br /> Yanling Wang, Yihan Zhao, Xiaodong Chen, Shasha Guo, Lixin Liu, Haoyang Li, Yong Xiao, <b>Jing  Zhang<sup>*</sup></b>, Qi Li, Ke Xu
+	</li></div>
+	<div class="pub all preprint LLM LLMInferenceSpeedup">
+	<li> 
+			<a href="https://arxiv.org/abs/2411.10666" target="_blank">SAM Decoding: Speculative Decoding via Suffix Automaton.</a>  
+			<br /> Yuxuan Hu, Ke Wang, Xiaokang Zhang, Fanjin Zhang, Cuiping Li, Hong Chen, <b>Jing  Zhang<sup>*</sup></b>
+			<br /> <b>arXiv:2501.01054</b>. 
+
+	</li></div>
+	<div class="pub all preprint LLM LLMCompression">
+	<li> 
+			<a href="https://arxiv.org/abs/2501.08582" target="_blank">LoRS: Efficient Low-Rank Adaptation for Sparse Large Language Model.</a>  
+			<br /> Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>, Xiaodong Chen, Zhe Zhao, Cuiping Li, Hong Chen
+			<br /> <b>arXiv:2501.08582</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLMCompression">
+	<li> 
+			<a href="https://arxiv.org/abs/2411.10272" target="_blank">P^2Law: Scaling Law for Post-Training After Model Pruning.</a>  
+			<br /> Xiaodong Chen, Yuxuan Hu, Xiaokang Zhang, Yanling Wang, Cuiping Li, Hong Chen, <b>Jing  Zhang<sup>*</sup></b>, 
+			<br /> <b>arXiv:2411.10272</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLM-alignment LLM4DB">
+	<li> 
+			<a href="https://arxiv.org/abs/2411.10272" target="_blank">Unlocking the Potential of Direct Preference Optimization in Text-to-SQL Through Chain-of-Thought Reasoning.</a>  
+			<br /> Hanbing Liu, Haoyang Li, Xiaokang Zhang, Ruotong Chen, Haiyong Xu, Tian Tian, Qi Qi, <b>Jing  Zhang<sup>*</sup></b>, 
+			<br /> <b>arXiv:2411.10272</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLM-alignment LLM4DB">
+	<li> 
+			<a href="https://arxiv.org/abs/2501.01668" target="_blank">CoT-based Synthesizer: Enhancing LLM Performance through Answer Synthesispdf icon.</a>  
+			<br /> Bohan Zhang, Xiaokang Zhang, <b>Jing  Zhang<sup>*</sup></b>, Jifan Yu, Sijia Luo, Jie Tang, 
+			<br /> <b>arXiv:2501.01668</b>. 
+	</li></div>
+	<div class="pub all conf LLM LLMCompression">
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19135" target="_blank">Compressing Large Language Models by Streamlining
 the Unimportant Layer.</a>  
 			<br /> Xiaodong Chen, Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>,Yanling Wang, Cuiping Li, Hong Chen
 			<br /> <b>ICLR'25</b>. 
 	</li></div>
+	<div class="pub all conf LLM LLM4StructuredData LLM4DB LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2404.11581" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
 Language Models.</a>  
 			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
 			<br /> <b>VLDB'25</b>. 
 	</li></div>
-	<div class="pub all preprint LLM LLM4StructuredData LLM4Toolusing LLM-alignment">
+	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2405.15165" target="_blank">A Solution-based LLM API-using Methodology for Academic Information Seeking.</a>  
 			<br /> Yuanchun Wang, Jifan Yu, Zijun Yao, <b>Jing Zhang<sup>*</sup></b>, Yuyang Xie, Shangqing Tu, Yiyang Fu, Youhe Feng, Jinkai Zhang, Jingyao Zhang, Bowen Huang, Yuanyao Li, Huihui Yuan, Lei Hou, Juanzi Li, Jie Tang
@@ -286,13 +331,13 @@ Language Models.</a>
 			<a class="button" href="https://soay.aminer.cn/" target="_blank">demo</a> 
 			<a class="button" href="https://huggingface.co/datasets/frederickwang99/SoAyBench" target="_blank">benchmark</a> 
 	</li></div>	
-	<div class="pub all preprint LLM LLM4StructuredData LLM4DB">
+	<div class="pub all journal LLM LLM4StructuredData LLM4DB">
 	<li> 
 			<a href="https://arxiv.org/abs/2402.05121" target="_blank">Large Language Model for Table Processing: A Survey.</a>  
 			<br /> Weizheng Lu, <b>Jing  Zhang<sup>*</sup></b>, Ju Fan, Zihao Fu, Yueguo Chen, Xiaoyong Du
 			<br /> <b>Frontiers of Computer Science (FCS'24)</b>. 
 	</li></div>
-	<div class="pub all preprint LLM LLM4StructuredData">
+	<div class="pub all conf LLM LLM4StructuredData">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
@@ -300,19 +345,19 @@ Language Models.</a>
 			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
 
 	</li></div>	
-	<div class="pub all preprint LLM LLM4StructuredData">
+	<div class="pub all conf LLM LLM4StructuredData">
 	<li> 
 			<a href="" target="_blank">PowerPM: Foundation Model for Power Systems.</a>  
 			<br /> Shihao Tu, Yupeng Zhang, <b>Jing Zhang</b>, Zhendong Fu, Yin Zhang, and Yang Yang. 
 			<br /> <b>Neurips'24</b>. 
 	</li></div>	
-	<div class="pub all preprint LLM  LLM-alignment kr kr-qa">
+	<div class="pub all conf LLM  LLM-alignment kr kr-qa">
 	<li> 
 			<a href="https://arxiv.org/pdf/2410.01363" target="_blank">PCQPR: Proactive Conversational Question Planning with Reflection.</a>  
 			<br /> Shasha Guo, Lizi Liao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen
 			<br /> <b>EMNLP'24</b>. 
 	</li></div>
-	<div class="pub all preprint LLM LLM-alignment">
+	<div class="pub all conf LLM LLM-alignment">
 	<li> 
 			<a href="https://www.sciencedirect.com/science/article/pii/S2666651024000135" target="_blank">Authorship style transfer with inverse transfer data augmentation.</a>  
 			<br /> Zhonghui Shao, <b>Jing Zhang<sup>*</sup></b>, Haoyang Li, Xinmei Huang, Chao Zhou, Yuanchun Wang, Jibing Gong, Cuiping Li, Hong Chen
@@ -338,7 +383,7 @@ Language Models.</a>
 			<br /> Xiao Liu, Xuanyu Lei, Shengyuan Wang, Yue Huang, Zhuoer Feng, Bosi Wen, Jiale Cheng, Pei Ke, Yifan Xu, Weng Lam Tam, Xiaohan Zhang, Lichao Sun, Hongning Wang, <b>Jing Zhang</b>, Minlie Huang, Yuxiao Dong, Jie Tang
 			<br /> <b>ACL'24</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM4Compression">
+	<div class="pub all conf LLM LLMCompression">
 		<li> 
 			<a href="https://arxiv.org/pdf/2308.16475.pdf" target="_blank">SP^3: Enhancing Structured Pruning via PCA Projection.</a>  
 			<br /> Yuxuan Hu, <b>Jing Zhang<sup>*</sup></b>, Zhe Zhao, Chen Zhao, Xiaodong Chen, Cuiping Li, Hong Chen.
@@ -364,6 +409,18 @@ Text-to-SQL.</a>
 			<br /> Haoyang Li, <b>Jing  Zhang<sup>*</sup></b>, Hanbing Liu, Ju Fan, Xiaokang Zhang, Jun Zhu, Renjie Wei, Hongyan Pan, Cuiping Li, Hong Chen.
 			<br /> <b>SIGMOD'24</b>. 
 			<br><a class="button" href="https://github.com/RUCKBReasoning/codes" target="_blank">code&model&data</a> 
+	</li></div>
+	<div class="pub all conf grl grl-pt">
+	<li> 
+			<a href="https://www.ijcai.org/proceedings/2024/424" target="_blank">Disentangling Domain and General Representations for Time Series Classification.</a>  
+			<br /> Youmin Chen, Xinyu Yan, Yang Yang, Jianfeng Zhang, <b>Jing  Zhang</b>, Lujia Pan, Juren Li
+			<br /> <b>IJCAI'24</b>. 
+	</li></div>
+	<div class="pub all journal LLM LLM-alignment">
+	<li> 
+			<a href="https://www.ijcai.org/proceedings/2024/424" target="_blank">Authorship style transfer with inverse transfer data augmentation.</a>  
+			<br /> Zhonghui Shao, <b>Jing  Zhang<sup>*</sup></b>, Haoyang Li, Xinmei Huang, Chao Zhou, Yuanchun Wang, Jibing Gong, Cuiping Li, Hong Chen
+			<br /> <b>AI Open'24</b>. 
 	</li></div>
 	<div class="pub all conf grl grl-pt">
 	<li> 
