--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@ More information about my experience and research can be found on <a href="https
 			<a class="url"  onclick="show('LLM4DB')">LLM4DB</a> |
 			<a class="url"  onclick="show('LLM4Toolusing')">LLM Tool Using</a> |
 			<a class="url"  onclick="show('LLMhallucination')">LLM Hallucination</a> |
-			<a class="url"  onclick="show('LLM-eval')">LLM Evaluation</a> 
-			<a class="url"  onclick="show('VLM')">VLM</a> 
+			<a class="url"  onclick="show('LLM-eval')">LLM Evaluation</a> |
+			<a class="url"  onclick="show('VLM')">VLM</a> |
 			<a class="url"  onclick="show('VLM-eval')">VLM Evaluation</a> 
 		<br />
 	</li>
