--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ More information about my experience and research can be found on <a href="https
 			<br /> Hanbing Liu, Haoyang Li, Xiaokang Zhang, Ruotong Chen, Haiyong Xu, Tian Tian, Qi Qi, <b>Jing  Zhang<sup>*</sup></b>, 
 			<br /> <b>arXiv:2411.10272</b>. 
 	</li></div>
-	<div class="pub all preprint LLM LLM-alignment LLM4DB">
+	<div class="pub all preprint LLM LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2501.01668" target="_blank">CoT-based Synthesizer: Enhancing LLM Performance through Answer Synthesispdf icon.</a>  
 			<br /> Bohan Zhang, Xiaokang Zhang, <b>Jing  Zhang<sup>*</sup></b>, Jifan Yu, Sijia Luo, Jie Tang, 
