--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ Language Models.</a>
 			<br /> Weizheng Lu, <b>Jing  Zhang<sup>*</sup></b>, Ju Fan, Zihao Fu, Yueguo Chen, Xiaoyong Du
 			<br /> <b>Frontiers of Computer Science (FCS'24)</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM4StructuredData">
+	<div class="pub all conf LLM LLM4StructuredData LLM-eval">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
