--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ Language Models.</a>
 			<br /> Weizheng Lu, <b>Jing  Zhang<sup>*</sup></b>, Ju Fan, Zihao Fu, Yueguo Chen, Xiaoyong Du
 			<br /> <b>Frontiers of Computer Science (FCS'24)</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM4StructuredData LLM-eval">
+	<div class="pub all conf LLM LLM-alignment LLM4StructuredData LLM-eval">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.14991" target="_blank">SpreadsheetBench: Towards Challenging Real World Spreadsheet Manipulation.</a>  
 			<br /> Zeyao Ma, Bohan Zhang, <b>Jing Zhang<sup>*</sup></b>, Jifan Yu, Xiaokang Zhang, Xiaohan Zhang, Sijia Luo, Xi Wang, Jie Tang
@@ -345,7 +345,7 @@ Language Models.</a>
 			<br><a class="button" href="https://spreadsheetbench.github.io" target="_blank">code&data</a> 
 
 	</li></div>	
-	<div class="pub all conf LLM LLM4StructuredData">
+	<div class="pub all conf LLM LLM-alignment LLM4StructuredData">
 	<li> 
 			<a href="" target="_blank">PowerPM: Foundation Model for Power Systems.</a>  
 			<br /> Shihao Tu, Yupeng Zhang, <b>Jing Zhang</b>, Zhendong Fu, Yin Zhang, and Yang Yang. 
@@ -363,7 +363,7 @@ Language Models.</a>
 			<br /> Zhonghui Shao, <b>Jing Zhang<sup>*</sup></b>, Haoyang Li, Xinmei Huang, Chao Zhou, Yuanchun Wang, Jibing Gong, Cuiping Li, Hong Chen
 			<br /> <b>AI Open'24</b>. 
 	</li></div>
-	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing">
+	<div class="pub all conf LLM LLM-alignment LLM4StructuredData LLM4Toolusing LLM-eval">
 	<li> 
 			<a href="https://arxiv.org/abs/2406.11681" target="_blank">R-Eval: A Unified Toolkit for Evaluating Domain Knowledge of Retrieval Augmented Large Language Models.</a>  
 			<br /> Shangqing Tu, Yuanchun Wang, Jifan Yu, Yuyang Xie, Yaran Shi, Xiaozhi Wang, <b>Jing Zhang<sup>*</sup></b>, Lei Hou, Juanzi Li
