--- a/index.html
+++ b/index.html
@@ -316,9 +316,8 @@ the Unimportant Layer.</a>
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData LLM4DB LLM-alignment">
 	<li> 
-			<a href="https://arxiv.org/abs/2404.11581" target="_blank">LLMTune: Accelerate Database Knob Tuning with Large
-Language Models.</a>  
-			<br /> Xinmei Huang, Haoyang Li, <b>Jing Zhang<sup>*</sup></b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Zhuohao Yu,Tieying Zhang, Hong Chen, Cuiping Li
+			<a href="https://arxiv.org/abs/2404.11581" target="_blank">E2ETune: End-to-End Knob Tuning via Fine-tuned Generative Language Model.</a>  
+			<br /> Xinmei Huang, Haoyang Li, <b>Jing  Zhang<sup>*</sup></b>, Xinxin Zhao, Zhiming Yao, Yiyan Li, Tieying Zhang, Jianjun Chen, Hong Chen, Cuiping Li
 			<br /> <b>VLDB'25</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM4StructuredData LLM4Toolusing LLM-alignment">
