--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ More information about my experience and research can be found on <a href="https
 			<br /> Xiaodong Chen, Yuxuan Hu, Xiaokang Zhang, Yanling Wang, Cuiping Li, Hong Chen, <b>Jing  Zhang<sup>*</sup></b>, 
 			<br /> <b>arXiv:2411.10272</b>. 
 	</li></div>
-	<div class="pub all preprint LLM LLM-alignment LLM4DB">
+	<div class="pub all preprint LLM LLM-alignment LLM4DB kr-text2sql">
 	<li> 
 			<a href="https://arxiv.org/abs/2411.10272" target="_blank">Unlocking the Potential of Direct Preference Optimization in Text-to-SQL Through Chain-of-Thought Reasoning.</a>  
 			<br /> Hanbing Liu, Haoyang Li, Xiaokang Zhang, Ruotong Chen, Haiyong Xu, Tian Tian, Qi Qi, <b>Jing  Zhang<sup>*</sup></b>, 
