--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <b>Conference PC members:</b> 
 <br />
 </p><ol>
-	<li>2025: KDD, WWW (SPC), ARR, ICLR
+	<li>2025: KDD, WWW (SPC), ARR(AC), ICLR
 	<li>2024: KDD, WWW, AAAI, ARR, NeurIPS
 	<li>2023: KDD, WWW (SPC), AAAI, ECML/PKDD (SPC) 
 	<li>2022: KDD, WWW, IJCAI, AAAI, WSDM
