--- a/index.html
+++ b/index.html
@@ -262,9 +262,15 @@ More information about my experience and research can be found on <a href="https
 </p>
 
 
-	
+	https://arxiv.org/abs/2503.02240
 
 <ol>
+	<div class="pub all preprint LLM LLM-alignment LLM4StructuredData LLM4DB kr-text2sql">
+	<li> 
+			<a href="https://arxiv.org/abs/2503.02240" target="_blank">OmniSQL: Synthesizing High-quality Text-to-SQL Data at Scale.</a>  
+			<br /> Haoyang Li, Shang Wu, Xiaokang Zhang, Xinmei Huang, <b>Jing  Zhang<sup>*</sup></b>, Fuxin Jiang, Shuai Wang, Tieying Zhang, Jianjun Chen, Rui Shi, Hong Chen, Cuiping Li
+			<br /> <b>arXiv:2503.02240</b>. 
+	</li></div>
 	<div class="pub all preprint LLM LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2501.01054" target="_blank">Dynamic Scaling of Unit Tests for Code Reward Modeling.</a>  
@@ -297,9 +303,9 @@ More information about my experience and research can be found on <a href="https
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment LLM4DB kr-text2sql">
 	<li> 
-			<a href="https://arxiv.org/abs/2411.10272" target="_blank">Unlocking the Potential of Direct Preference Optimization in Text-to-SQL Through Chain-of-Thought Reasoning.</a>  
+			<a href="https://arxiv.org/abs/2502.11656" target="_blank">Uncovering the Impact of Chain-of-Thought Reasoning for Direct Preference Optimization: Lessons from Text-to-SQL.</a>  
 			<br /> Hanbing Liu, Haoyang Li, Xiaokang Zhang, Ruotong Chen, Haiyong Xu, Tian Tian, Qi Qi, <b>Jing  Zhang<sup>*</sup></b>, 
-			<br /> <b>arXiv:2411.10272</b>. 
+			<br /> <b>arXiv:2502.11656</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment">
 	<li> 
