--- a/index.html
+++ b/index.html
@@ -277,8 +277,10 @@ More information about my experience and research can be found on <a href="https
 	</li></div>
 	<div class="pub all preprint VLM VLM-eval">
 	<li> 
-			<a href="https://arxiv.org/abs/2501.01054" target="_blank">VisualSimpleQA: A Benchmark for Decoupled Evaluation of Large Vision-Language Models in Fact-Seeking Question Answering.</a>  
+			<a href="https://arxiv.org/pdf/2503.06492" target="_blank">VisualSimpleQA: A Benchmark for Decoupled Evaluation of Large Vision-Language Models in Fact-Seeking Question Answering.</a>  
 			<br /> Yanling Wang, Yihan Zhao, Xiaodong Chen, Shasha Guo, Lixin Liu, Haoyang Li, Yong Xiao, <b>Jing  Zhang<sup>*</sup></b>, Qi Li, Ke Xu
+			<br /> <b>arXiv:2503.06492</b>. 
+			<br><a class="button" href="https://huggingface.co/datasets/WYLing/VisualSimpleQA" target="_blank">benchmark</a> 
 	</li></div>
 	<div class="pub all preprint LLM LLMInferenceSpeedup">
 	<li> 
