--- a/index.html
+++ b/index.html
@@ -298,19 +298,19 @@ More information about my experience and research can be found on <a href="https
 	<div class="pub all preprint LLM LLMCompression">
 	<li> 
 			<a href="https://arxiv.org/abs/2411.10272" target="_blank">P^2Law: Scaling Law for Post-Training After Model Pruning.</a>  
-			<br /> Xiaodong Chen, Yuxuan Hu, Xiaokang Zhang, Yanling Wang, Cuiping Li, Hong Chen, <b>Jing  Zhang<sup>*</sup></b>, 
+			<br /> Xiaodong Chen, Yuxuan Hu, Xiaokang Zhang, Yanling Wang, Cuiping Li, Hong Chen, <b>Jing  Zhang<sup>*</sup></b>
 			<br /> <b>arXiv:2411.10272</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment LLM4DB kr-text2sql">
 	<li> 
 			<a href="https://arxiv.org/abs/2502.11656" target="_blank">Uncovering the Impact of Chain-of-Thought Reasoning for Direct Preference Optimization: Lessons from Text-to-SQL.</a>  
-			<br /> Hanbing Liu, Haoyang Li, Xiaokang Zhang, Ruotong Chen, Haiyong Xu, Tian Tian, Qi Qi, <b>Jing  Zhang<sup>*</sup></b>, 
+			<br /> Hanbing Liu, Haoyang Li, Xiaokang Zhang, Ruotong Chen, Haiyong Xu, Tian Tian, Qi Qi, <b>Jing  Zhang<sup>*</sup></b>,
 			<br /> <b>arXiv:2502.11656</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2501.01668" target="_blank">CoT-based Synthesizer: Enhancing LLM Performance through Answer Synthesis.</a>  
-			<br /> Bohan Zhang, Xiaokang Zhang, <b>Jing  Zhang<sup>*</sup></b>, Jifan Yu, Sijia Luo, Jie Tang, 
+			<br /> Bohan Zhang, Xiaokang Zhang, <b>Jing  Zhang<sup>*</sup></b>, Jifan Yu, Sijia Luo, Jie Tang,
 			<br /> <b>arXiv:2501.01668</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLMCompression">
