--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ More information about my experience and research can be found on <a href="https
 	<div class="pub all preprint LLM LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2501.01668" target="_blank">CoT-based Synthesizer: Enhancing LLM Performance through Answer Synthesis.</a>  
-			<br /> Bohan Zhang, Xiaokang Zhang, <b>Jing  Zhang<sup>*</sup></b>, Jifan Yu, Sijia Luo, Jie Tang,
+			<br /> Bohan Zhang, Xiaokang Zhang, <b>Jing  Zhang<sup>*</sup></b>, Jifan Yu, Sijia Luo, Jie Tang
 			<br /> <b>arXiv:2501.01668</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLMCompression">
