--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ More information about my experience and research can be found on <a href="https
 	<div class="pub all preprint LLM LLM-alignment LLM4DB kr-text2sql">
 	<li> 
 			<a href="https://arxiv.org/abs/2502.11656" target="_blank">Uncovering the Impact of Chain-of-Thought Reasoning for Direct Preference Optimization: Lessons from Text-to-SQL.</a>  
-			<br /> Hanbing Liu, Haoyang Li, Xiaokang Zhang, Ruotong Chen, Haiyong Xu, Tian Tian, Qi Qi, <b>Jing  Zhang<sup>*</sup></b>,
+			<br /> Hanbing Liu, Haoyang Li, Xiaokang Zhang, Ruotong Chen, Haiyong Xu, Tian Tian, Qi Qi, <b>Jing  Zhang<sup>*</sup></b>
 			<br /> <b>arXiv:2502.11656</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment">
