--- a/index.html
+++ b/index.html
@@ -265,6 +265,12 @@ More information about my experience and research can be found on <a href="https
 <ol>
 	<div class="pub all preprint LLM LLM-alignment LLM4DB">
 	<li> 
+			<a href="https://arxiv.org/pdf/2503.06902" target="_blank">A Query Optimization Method Utilizing Large Language Models.</a>  
+			<br /> Zhiming Yao, Haoyang Li, <b>Jing  Zhang<sup>*</sup></b>, Cuiping Li, Hong Chen
+			<br /> <b>arXiv:2503.06902</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLM-alignment LLM4DB">
+	<li> 
 			<a href="https://arxiv.org/abs/2503.07884" target="_blank">LLMIdxAdvis: Resource-Efficient Index Advisor Utilizing Large Language Model.</a>  
 			<br /> Xinxin Zhao, Haoyang Li, <b>Jing  Zhang<sup>*</sup></b>, Xinmei Huang, Tieying Zhang, Jianjun Chen, Rui Shi, Cuiping Li, Hong Chen
 			<br /> <b>arXiv:2503.07884</b>. 
