--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ More information about my experience and research can be found on <a href="https
 	<li> 
 			<a href="https://arxiv.org/abs/2501.01054" target="_blank">Dynamic Scaling of Unit Tests for Code Reward Modeling.</a>  
 			<br /> Zeyao Ma, Xiaokang Zhang,  <b>Jing  Zhang<sup>*</sup></b>, Jifan Yu, Sijia Luo, Jie Tang
-			<br /> <b>arXiv:2501.01054</b>. 
+			<br /> <b>ACL'25</b>. 
 	</li></div>
 	<div class="pub all preprint VLM VLM-eval">
 	<li> 
@@ -294,36 +294,43 @@ More information about my experience and research can be found on <a href="https
 			<br /> <b>arXiv:2503.06492</b>. 
 			<br><a class="button" href="https://huggingface.co/datasets/WYLing/VisualSimpleQA" target="_blank">benchmark</a> 
 	</li></div>
-	<div class="pub all preprint LLM LLMInferenceSpeedup">
-	<li> 
-			<a href="https://arxiv.org/abs/2411.10666" target="_blank">SAM Decoding: Speculative Decoding via Suffix Automaton.</a>  
-			<br /> Yuxuan Hu, Ke Wang, Xiaokang Zhang, Fanjin Zhang, Cuiping Li, Hong Chen, <b>Jing  Zhang<sup>*</sup></b>
-			<br /> <b>arXiv:2501.01054</b>. 
-
-	</li></div>
 	<div class="pub all preprint LLM LLMCompression">
 	<li> 
 			<a href="https://arxiv.org/abs/2501.08582" target="_blank">LoRS: Efficient Low-Rank Adaptation for Sparse Large Language Model.</a>  
 			<br /> Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>, Xiaodong Chen, Zhe Zhao, Cuiping Li, Hong Chen
 			<br /> <b>arXiv:2501.08582</b>. 
 	</li></div>
+	<div class="pub all preprint LLM LLMInferenceSpeedup">
+	<li> 
+			<a href="https://arxiv.org/abs/2411.10666" target="_blank">SAM Decoding: Speculative Decoding via Suffix Automaton.</a>  
+			<br /> Yuxuan Hu, Ke Wang, Xiaokang Zhang, Fanjin Zhang, Cuiping Li, Hong Chen, <b>Jing  Zhang<sup>*</sup></b>
+			<br /> <b>ACL'25</b>. 
+
+	</li></div>
 	<div class="pub all preprint LLM LLMCompression">
 	<li> 
 			<a href="https://arxiv.org/abs/2411.10272" target="_blank">P^2Law: Scaling Law for Post-Training After Model Pruning.</a>  
 			<br /> Xiaodong Chen, Yuxuan Hu, Xiaokang Zhang, Yanling Wang, Cuiping Li, Hong Chen, <b>Jing  Zhang<sup>*</sup></b>
-			<br /> <b>arXiv:2411.10272</b>. 
+			<br /> <b>ACL'25</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment LLM4DB kr-text2sql">
 	<li> 
 			<a href="https://arxiv.org/abs/2502.11656" target="_blank">Uncovering the Impact of Chain-of-Thought Reasoning for Direct Preference Optimization: Lessons from Text-to-SQL.</a>  
 			<br /> Hanbing Liu, Haoyang Li, Xiaokang Zhang, Ruotong Chen, Haiyong Xu, Tian Tian, Qi Qi, <b>Jing  Zhang<sup>*</sup></b>
-			<br /> <b>arXiv:2502.11656</b>. 
+			<br /> <b>ACL'25</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2501.01668" target="_blank">CoT-based Synthesizer: Enhancing LLM Performance through Answer Synthesis.</a>  
 			<br /> Bohan Zhang, Xiaokang Zhang, <b>Jing  Zhang<sup>*</sup></b>, Jifan Yu, Sijia Luo, Jie Tang
-			<br /> <b>arXiv:2501.01668</b>. 
+			<br /> <b>ACL'25</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLM4StructuredData LLM-alignment">
+	<li> 
+			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios.</a>  
+			<br /> Xiaokang Zhang, <b>Jing Zhang<sup>*</sup></b>, Zeyao Ma, Yang Li, Bohan Zhang, Guanlin Li, Zijun Yao, Kangli Xu, Jinchang Zhou, Daniel Zhang-Li, Jifan Yu, Shu Zhao, Juanzi Li, Jie Tang
+			<br /> <b>Findings of ACL'25</b>. 
+			<br><a class="button" href="https://tablellm.github.io/" target="_blank">code&model&data&demo</a> 
 	</li></div>
 	<div class="pub all conf LLM LLMCompression">
 	<li> 
@@ -405,13 +412,6 @@ the Unimportant Layer.</a>
 			<a href="https://arxiv.org/abs/2406.05328" target="_blank">Hidden Question Representations Tell Non-Factuality Within and Across Large Language Models.</a>  
 			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang</b>, Xinlei He, Qi Li, Ke Xu
 			<br /> <b>arXiv:2406.05328</b>. 
-	</li></div>
-	<div class="pub all preprint LLM LLM4StructuredData LLM-alignment">
-	<li> 
-			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios.</a>  
-			<br /> Xiaokang Zhang, <b>Jing Zhang<sup>*</sup></b>, Zeyao Ma, Yang Li, Bohan Zhang, Guanlin Li, Zijun Yao, Kangli Xu, Jinchang Zhou, Daniel Zhang-Li, Jifan Yu, Shu Zhao, Juanzi Li, Jie Tang
-			<br /> <b>arXiv:2403.19318</b>. 
-			<br><a class="button" href="https://tablellm.github.io/" target="_blank">code&model&data&demo</a> 
 	</li></div>
 	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLM4DB LLM-alignment">
 	<li> 
