--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ More information about my experience and research can be found on <a href="https
 	<div class="pub all preprint LLM LLM4StructuredData LLM-alignment">
 	<li> 
 			<a href="https://arxiv.org/abs/2403.19318" target="_blank">TableLLM: Enabling Tabular Data Manipulation by LLMs in Real Office Usage Scenarios.</a>  
-			<br /> Xiaokang Zhang, <b>Jing Zhang<sup>*</sup></b>, Zeyao Ma, Yang Li, Bohan Zhang, Guanlin Li, Zijun Yao, Kangli Xu, Jinchang Zhou, Daniel Zhang-Li, Jifan Yu, Shu Zhao, Juanzi Li, Jie Tang
+			<br /> Xiaokang Zhang, Sijia Luo, Bohan Zhang, Zeyao Ma, <b>Jing Zhang<sup>*</sup></b>, Yang Li, Guanlin Li, Zijun Yao, Kangli Xu, Jinchang Zhou, Daniel Zhang-Li, Jifan Yu, Shu Zhao, Juanzi Li, Jie Tang
 			<br /> <b>Findings of ACL'25</b>. 
 			<br><a class="button" href="https://tablellm.github.io/" target="_blank">code&model&data&demo</a> 
 	</li></div>
