--- a/index.html
+++ b/index.html
@@ -265,6 +265,18 @@ More information about my experience and research can be found on <a href="https
 <ol>
 	<div class="pub all preprint LLM LLM-alignment LLM4DB">
 	<li> 
+			<a href="" target="_blank">A Multi-Agent Collaborative Framework for Database Konb Tuning.</a>  
+			<br /> Yiyan Li, Haoyang Li, <b>Jing Zhang</b>, Renata Borovica-Gajic, Shuai Wang, Tieying Zhang, Jianjun Chen, Rui Shi, Cuiping Li, Hong Chen
+			<br /> <b>SIGMOD'26</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLMhallucination">
+	<li> 
+			<a href="https://arxiv.org/abs/2406.05328" target="_blank">Hidden Question Representations Tell Non-Factuality Within and Across Large Language Models.</a>  
+			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang<sup>*</sup></b>, Xinlei He, Qi Li, Ke Xu
+			<br /> <b>EMNLP'25</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLM-alignment LLM4DB">
+	<li> 
 			<a href="https://arxiv.org/pdf/2503.06902" target="_blank">A Query Optimization Method Utilizing Large Language Models.</a>  
 			<br /> Zhiming Yao, Haoyang Li, <b>Jing  Zhang<sup>*</sup></b>, Cuiping Li, Hong Chen
 			<br /> <b>arXiv:2503.06902</b>. 
@@ -406,12 +418,6 @@ the Unimportant Layer.</a>
 			<a href="https://arxiv.org/pdf/2308.16475.pdf" target="_blank">SP^3: Enhancing Structured Pruning via PCA Projection.</a>  
 			<br /> Yuxuan Hu, <b>Jing Zhang<sup>*</sup></b>, Zhe Zhao, Chen Zhao, Xiaodong Chen, Cuiping Li, Hong Chen.
 			<br /> <b>Findings of ACL'24</b>. 
-	</li></div>
-	<div class="pub all preprint LLM LLMhallucination">
-	<li> 
-			<a href="https://arxiv.org/abs/2406.05328" target="_blank">Hidden Question Representations Tell Non-Factuality Within and Across Large Language Models.</a>  
-			<br /> Yanling Wang, Haoyang Li, Hao Zou, <b>Jing Zhang</b>, Xinlei He, Qi Li, Ke Xu
-			<br /> <b>arXiv:2406.05328</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-text2sql LLM LLM4StructuredData LLM4DB LLM-alignment">
 	<li> 
